# moodflix

./: .gitignore  README.md
moodflix-ai-engine/: .gitignore  README.md  main.py  pyproject.toml
moodflix-ai-engine/app/api/: discover.py  onboarding.py  router.py  search.py
moodflix-ai-engine/app/config/: core.py  models.py  settings.py
moodflix-ai-engine/app/dto/: search_result.py
moodflix-ai-engine/app/engine/: filter_builder.py  mood_extractor.py  prompts.py  query_builder.py  query_classifier.py  vector_blender.py
moodflix-ai-engine/app/services/: discover_service.py  llm_service.py  onboarding_service.py  query_service.py  service_registry.py
moodflix-etl-pipeline/: .gitignore  README.md  main.py  pyproject.toml
moodflix-etl-pipeline/app/config/: core.py  logging_config.py  settings.py
moodflix-etl-pipeline/app/dto/: models.py
moodflix-etl-pipeline/app/services/: queue_service.py
moodflix-etl-pipeline/app/services/fetcher/: base_content_fetcher.py  movie_content_fetcher.py  tv_content_fetcher.py
moodflix-etl-pipeline/app/services/llm/: llm_service.py  mood_extractor.py  prompts.py
moodflix-etl-pipeline/app/services/store/: chroma_service.py  postgres_queries.py  postgres_service.py  postgres_session.py
moodflix-etl-pipeline/app/utils/serdes/: content_serdes.py  serdes_protocol.py
moodflix-etl-pipeline/app/workers/: fetcher_worker.py  writer_worker.py
moodflix-gateway/: .gitignore  README.md  pom.xml
moodflix-ui/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
moodflix-ui/src/: proxy.ts
(+99 files in other folders)
