[project]
name = "cinematch-etl-pipeline"
version = "0.1.0"
description = "etl data pipeline for cinematch-ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "psycopg2>=2.9.11",
    "pycompile>=0.2.3",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
]
